<resources>
    <string name="app_name">UniqueTrack</string>
    <string name="unique_track">UNIQUE TRACK</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="pw_input">패스워드를 입력하시오</string>
    <string name="id_in">ID_input</string>
    <string name="id_input">아이디를 입력하시오</string>
    <string name="login">LOGIN</string>
    <string name="join">JOIN</string>
    <string name="social_login">소셜로그인</string>
    <string name="logout">LOGOUT</string>
    <string name="change_password">NEW PW</string>
    <string name="user">USER</string>
    <string name="user_button">마이\n페이지</string>
    <string name="itemregister_button">제품\n등록</string>
    <string name="itemlist_button">제품\n목록</string>
    <string name="itemtransfer_button">제품 양도</string>
    <string name="itemcheck_button">제품\n조회</string>
    <string name="item_content">Item</string>
    <string name="list">제품 목록</string>
    <string name="nfc_title_text">NFC 태그를 갖다대세요</string>
    <string name="edit_item">정보수정</string>
    <string name="personal_info">개인정보 보호방침</string>
    <string name="transfer_text">제품 양도</string>
    <string name="personal_info">개인정보 보호방침</string>
    <string name="agree_check">물건 수령에 동의합니다.</string>
    <string name="agree_button">물건 수령</string>
    <string name="web_client_id">174108156327-s59uad1qsclfibp38g6jtu2h58rm4tql.apps.googleusercontent.com</string>
    <string name="blank">  </string>

    <string name="explanation_hint">제품설명</string>
    <string name="owner_name_hint">소유자이름</string>
    <string name="product_name_hint">제품이름</string>
    <string name="google_login">Google LOGIN</string>
    <string name="changePW_email">이메일로 비밀번호 변경</string>
    <string name="nfc_image">NFC image</string>
    <string name="productname">ProductName</string>
    <string name="registerdate">RegisterDate</string>
    <string name="nfcuid">NFCuid</string>
    <string name="explanation">Explanation</string>
    <string name="owneruid">OwnerUID</string>
    <string name="ownername">OwnerName</string>

</resources>