<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/changepwd_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/user_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/user_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/itemregister_button"
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:text="@string/itemregister_button"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <Button
        android:id="@+id/itemlist_button"
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:text="@string/itemlist_button"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemregister_button"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/itemtransfer_button"
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:text="@string/itemtransfer_button"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemlist_button"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/itemcheck_button"
        android:layout_width="220dp"
        android:layout_height="110dp"
        android:text="@string/itemcheck_button"
        android:textSize="24sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemlist_button"
        app:layout_constraintVertical_bias="0.659" />

</androidx.constraintlayout.widget.ConstraintLayout>