<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/join"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="39dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/unique_track"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="  ID를 입력하세요"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="60dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="  비밀번호를 입력하세요"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="308dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/pw"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/social_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/social_login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_button" />

</androidx.constraintlayout.widget.ConstraintLayout>